Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/TargetType68.out
TargetType68.java:38:32: compiler.err.cant.inherit.from.final: TargetType68.XYChart.Series
1 error
